--- a/public/themes/main.scss
+++ b/public/themes/main.scss
@@ -193,6 +193,14 @@ iframe {
     color: white;
 }
 
+.example-question {
+    color: $colorprimary;
+}
+
+.example-answer {
+    color: black;
+}
+
 .example-body {
     -webkit-print-color-adjust: exact;
     padding: 0.5em;
